SPEC/SPECKIT/specs/007-kubernetes-containerization/manifests/overlays/prod/patch-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sargentnexus-api
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/example/sargentnexus-api:1.0.0
