SPEC/SPECKIT/specs/007-kubernetes-containerization/manifests/overlays/prod/patch-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sargentnexus-client
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: client
          image: ghcr.io/example/sargentnexus-client:1.0.0
